	* Fixed bug #12054: PHP5.3-Warning about strcmp() parameters in view_help.php (thanks to Stefan Geith)
	* Fixed bug #12195: Renaming write protected file issues a php warning
	* Fixed bug #12099: Replace "Warning: filemtime(): stat failed" with a nice error message (thanks to Steffen Gebert)
	* Fixed bug #11937: Do not show E_DEPRECATED messages on productive systems

2009-11-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12612: Backend Login-Popup not working
	* Follow-up to bugfix #12612: Removed reference operators for objects and code cleanup
	* Fixed bug #12517: Password change in User tools -> User setup impossible if rsaauth and saltedpassword are installed
	* Fixed bug #12608: User settings module reports changed password and settings if there was no change at all
	* Fixed bug #4466: Index on tx_realurl_uniqalias breaks with DBAL (thanks to Xavier Perseguers)
	* Raised DBAL version from 0.9.25 to 1.0.0
	* Raised Extbase and Fluid versions from 0.9.17 to 1.0.0
	* !!! Moved Advanced Frontend Editing to TER
	* Integrated saltedpasswords completely instead of using svn:externals
	* Follow-up to bugfix #12648: PHP class file of t3lib_utility_Http is missing

2009-11-17  Benjamin Mack  <benni@typo3.org>

	* Commited test case for #12244: Improve locallangXMLOverride feature (Thanks to Steffen Gebert)
	  This changes the LLoverride feature to $GLOBALS['TYPO3_CONF_VARS']['SYS']['locallangXMLOverride'] as an array

2009-11-17  Steffen Kamper  <info@sk-typo3.de>

	* Added tests #12382: Feature/Code cleanup: Add some more unit tests (Thanks to Oliver Klee)
	* Fixed bug #12611: Add preRenderHook in pageRenderer
	* Fixed bug #12610: Inconsistent naming of "includeFooterJS"
	* Fixed bug #10119: Broken fe_adminLib.inc
	* Fixed bug #12616: Set recycler height dynamic
	* Fixed bug #12624: Unreplaced marker in login screen of classic skin

2009-11-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12619: htmlArea RTE: JS error raised by spell checker