@@ -9,6 +9,7 @@
 	* Fixed bug #12195: Renaming write protected file issues a php warning
 	* Fixed bug #12099: Replace "Warning: filemtime(): stat failed" with a nice error message (thanks to Steffen Gebert)
 	* Fixed bug #11937: Do not show E_DEPRECATED messages on productive systems
+	* Fixed bug #12516: Give admins the possibility to configure which errors should be logged to which log
 
 2009-11-17  Oliver Hader  <oliver@typo3.org>
 
